ChangeLog
=========

Jun 21, 2015 : v0.16 released!
  - fixed cracking boat/minecart (cracks must be on their own texture unit)
  - added Mario World dimension
    - new turtle entity
    - new block types
    - create portal using [?] blocks (see RecipeCoinBlock)

Jun 16, 2015 : v0.15 released!
  - water/lava now flow
  - animations and cracks are now built into the main stitched texture and updated on the tick timer
  - many performance issues and bugs fixed

Jun 11, 2015 : v0.14 released!
  - 2 days to implement the Sign
    - signs can be placed on the side of other blocks or in the ground at any angle (full 360)
  - entities will no longer spawn on water
  - JNA has been completely replaced with JNI (now even faster)

May 18, 2015 : v0.12 released!
  - FPS doubled after using JNI to call OpenGL (JavaForce/8.0)
  - added enderman, zombie pigman, slime

May 7, 2015 : v0.11 released!
  - new blocks : Hopper, Dropper, Dispenser
  - all blocks/items/entities/dims/extras (including plugins) use dynamic IDs saved in the world
    - so there will be no id conflicts
  - reduced GC usage more (now better than the reference impl)
    - using a custom build of JNA (a modified version that creates less new Object[] arrays)
      - see github.com/pquiring/jna
    - javaforce.gl.GL - no more new Object[] arrays for each func call
    - FPS looks a bit faster and more stable
  - added a chat history
  - make sure to delete all worlds before upgrading
  - many bugs fixed

Apr 30, 2015 : v0.10 released!
  - major changes for performance, but nothing new
  - thanks to VisualVM GC usage has been greatly reduced
    - the biggest offender now is JNA - I have plans to improve it
  - java.io.Serializable has been replaced with a custom process which is much faster
    - see jfcraft.data.Serial*
  - moved Domino to a plugin
  - many bugs fixed
    - the dominos will always fall now - introduced BlockEntity to find them better

Apr 24, 2015 : v0.9 released!