@@ -6,3 +6,6 @@ If a world is created in dedicated server, the leaves are dark (no light).
 
 Minecart : speed, dir, dist are not synced with client.  Need to sync them are get rid of them.
   soln : don't move on the client side while in a vehicle (let the server move the client)
+         - will be a slight delay : but that is expected in a vehicle
+
+Shift+Craft > 64 items - some items are lost ???
