@@ -203,7 +203,7 @@ public class Cow extends CreatureBase {
         }
       }
     }
-    if (fell || mode != MODE_IDLE || wasMoving) Static.server.broadcastEntityMove(this);
+    if (fell || mode != MODE_IDLE || wasMoving) Static.server.broadcastEntityMove(this, false);
   }
 
   private static Random r = new Random();
