@@ -118,7 +118,7 @@ public class WorldItem extends EntityBase {
     boolean moved = false;
     if (gravity(0)) moved = true;
     if (move(false, false, false, -1, AVOID_NONE)) moved = true;
-    if (moved) Static.server.broadcastEntityMove(this);
+    if (moved) Static.server.broadcastEntityMove(this, false);
     if (age > 3 * 20) {
       //check if player is overlapping me
       EntityBase e[] = Static.server.world.getEntities();
