@@ -221,7 +221,7 @@ public class Turtle extends CreatureBase {
       //turtles are always moving
       moveEntity();
     }
-    if (fell || target != null || mode != MODE_IDLE || wasMoving) Static.server.broadcastEntityMove(this);
+    if (fell || target != null || mode != MODE_IDLE || wasMoving) Static.server.broadcastEntityMove(this, false);
     super.tick();
   }
 
